# BookBoss

./: .dockerignore  .envrc  .gitignore  .justfile  .renovaterc.json5  CHANGELOG.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  config.sops.env
.claude/: CLAUDE.md  Database.md  Dioxus.md  settings.json
.config/: cliff.toml  mise.toml  prettierignore
.github/workflows/: pages.yaml  release.yaml  remove-tag.yaml  renovate.yaml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: system.proto
crates/api/src/: error.rs  grpc.rs  lib.rs
crates/api/src/grpc/: error.rs  system.rs
crates/bookboss/: Cargo.toml
crates/bookboss/src/: commands.rs  config.rs  logging.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  repository.rs  test_support.rs
crates/core/src/auth/: repository.rs  service.rs
crates/core/src/book/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/book/model/: author.rs  book.rs  book_file.rs  book_identifier.rs  genre.rs  metadata_source.rs  publisher.rs  series.rs  tag.rs
crates/core/src/book/repository/: author.rs  book.rs  genre.rs  publisher.rs  series.rs  tag.rs
crates/core/src/device/: mod.rs  model.rs  repository.rs
crates/core/src/device/model/: device.rs  device_book.rs  device_sync_log.rs
crates/core/src/device/repository/: device.rs
crates/core/src/import/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/import/model/: import_job.rs
crates/core/src/import/repository/: import_job.rs
crates/core/src/jobs/: handler.rs  mod.rs  registry.rs  repository.rs  worker.rs
crates/core/src/pipeline/: extractor.rs  mod.rs  model.rs  provider.rs  service.rs
crates/core/src/reading/: mod.rs  model.rs  repository.rs
crates/core/src/reading/model/: user_book_metadata.rs
crates/core/src/reading/repository/: user_book_metadata.rs
crates/core/src/shelf/: mod.rs  model.rs  repository.rs
crates/core/src/shelf/model/: book_shelf.rs  shelf.rs  shelf_filter.rs
crates/core/src/shelf/repository/: shelf.rs
crates/core/src/storage/: mod.rs  model.rs  store.rs
crates/core/src/types/: capability.rs  email.rs
crates/core/src/user/: model.rs  repository.rs  service.rs
crates/core/src/user/model/: user.rs
crates/core/src/user/repository/: user_settings.rs
crates/core/src/user/service/: user.rs  user_settings.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs  repository.rs  transaction.rs
crates/database/src/adapters/: author.rs  book.rs  genre.rs  import_job.rs  job.rs  mod.rs  publisher.rs  series.rs  session.rs  tag.rs  user.rs  user_settings.rs
crates/database/src/entities/: authors.rs  book_authors.rs  book_files.rs  book_genres.rs  book_identifiers.rs  book_shelves.rs  book_tags.rs  books.rs  device_books.rs  device_sync_log.rs  devices.rs  genres.rs  import_jobs.rs  jobs.rs  mod.rs  prelude.rs  publishers.rs  series.rs  shelves.rs  tags.rs  user_book_metadata.rs  users.rs
crates/database/src/migrations/: m20260225_000001_create_users_table.rs  m20260225_000002_create_sessions_table.rs  m20260228_000003_create_user_settings_table.rs  m20260302_000004_create_authors_table.rs  m20260302_000005_create_series_table.rs  m20260302_000006_create_publishers_table.rs  m20260302_000007_create_genres_table.rs  m20260302_000008_create_tags_table.rs  m20260302_000009_create_books_table.rs  m20260302_000010_create_book_authors_table.rs  m20260302_000011_create_book_genres_table.rs  m20260302_000012_create_book_tags_table.rs  m20260302_000013_create_book_identifiers_table.rs  m20260302_000014_create_book_files_table.rs  m20260302_000015_create_user_book_metadata_table.rs  m20260302_000016_create_devices_table.rs  m20260302_000017_create_device_books_table.rs  m20260302_000018_create_device_sync_log_table.rs  m20260303_000019_create_shelves_table.rs  m20260303_000020_create_book_shelves_table.rs  m20260303_000021_create_import_jobs_table.rs  m20260303_000022_drop_file_path_from_book_files.rs  m20260305_000022_create_jobs_table.rs  mod.rs
crates/formats/: Cargo.toml
crates/formats/src/: epub.rs  error.rs  lib.rs
crates/formats/src/opf/: mod.rs  parse.rs  regression_tests.rs  write.rs
crates/formats/src/opf/snapshots/: bb_formats__opf__regression_tests__extract_metadata_opf2_full.snap  bb_formats__opf__regression_tests__isbn10_classified_correctly.snap  bb_formats__opf__regression_tests__isbn13_classified_correctly.snap  bb_formats__opf__regression_tests__opf2_plain_year_date.snap  bb_formats__opf__regression_tests__sidecar_roundtrip.snap
crates/frontend/: Cargo.toml
crates/frontend/assets/: tailwind.css
crates/frontend/src/: error.rs  lib.rs  settings.rs
crates/frontend/src/components/: app_layout.rs  book_grid.rs  book_table.rs  detail_panel.rs  login_form.rs  mod.rs  nav_bar.rs  register_admin_form.rs
crates/frontend/src/routes/: author_detail_page.rs  book_detail_page.rs  books_page.rs  edit_metadata_page.rs  incoming_page.rs  landing_page.rs  mod.rs  review_page.rs  series_detail_page.rs  settings_page.rs
crates/frontend/src/server/: auth_user.rs  covers.rs  mod.rs  session_pool.rs
crates/import/: Cargo.toml
crates/import/src/: handler.rs  lib.rs  scanner.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: context.rs  main.rs  mysql.rs  postgres.rs  sqlite.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/metadata/src/google_books/: mod.rs  model.rs
crates/metadata/src/hardcover/: mod.rs  model.rs
crates/metadata/src/open_library/: mod.rs  model.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  local.rs
crates/utils/: Cargo.toml
crates/utils/src/: hash.rs  token.rs
docs/: book.toml
docs/src/: SUMMARY.md  index.md
docs/src/contributing/: architecture.md  commands.md  conventions.md  database.md  frontend.md  setup.md
docs/src/user/: configuration.md  database.md  getting-started.md  installation.md  managing-library.md
scripts/: release.sh
