[package]
name = "bb-api"
description = "BookBoss API support"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

build = "build.rs"

[dependencies]
bb-core.workspace = true

async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
hyper.workspace = true
hyper-util.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-reflection.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
bb-core = { workspace = true, features = ["test-support"] }

[build-dependencies]
tonic-prost-build.workspace = true
