[package]
name = "bb-core"
description = "BookBoss core services"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
test-support = []

[dependencies]
bb-utils.workspace = true

argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
derive_builder.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-graceful-shutdown.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
