[package]
name = "bb-database"
description = "BookBoss database services"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bb-core.workspace = true

async-trait.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
bb-core = { workspace = true, features = ["test-support"] }
tokio.workspace = true
