[package]
name = "bb-formats"
description = "BookBoss file format services"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bb-core.workspace = true

async-trait.workspace = true
chrono.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
bb-core = { workspace = true, features = ["test-support"] }
insta.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
