[package]
name = "integration-tests"
description = "BookBoss integration tests"
publish = false
autotests = false
autobins = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[test]]
name = "integration"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = ["dep:testcontainers", "dep:testcontainers-modules"]
sqlite = []
mysql = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
bb-core = { workspace = true, features = ["test-support"] }
bb-database.workspace = true

sea-orm.workspace = true
tokio.workspace = true

[dependencies.testcontainers]
workspace = true
optional = true

[dependencies.testcontainers-modules]
workspace = true
optional = true

[lints]
workspace = true
